# MLOps_end2end_MSDS2026

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  make.ps1  pyproject.toml  requirements.txt  todo.md
.devcontainer/: devcontainer.json
data/raw/: Computer_Durability.csv  Computer_Durability_Plus.csv
models/: best_model_info.json  feature_meta.json  optuna_trials.csv
scripts/: run_pipeline.py  synthesize_data.py
serving/: api.py
src/mlops_pipeline/: config.py  definitions.py  resources.py
src/mlops_pipeline/assets/: data_assets.py  evaluation_assets.py  training_assets.py
